[package]
name = "mavulator"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies.uorb-codec]
#git = "https://github.com/tstellanova/uorb-codec.git"
path = "../uorb-codec"


[dependencies.flighty]
#git = "https://github.com/tstellanova/flighty.git"
path = "../flighty"